kubernetes/apps/home-automation/nodered/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodered
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodered
  template:
    metadata:
      labels:
        app: nodered
        nfsMount: "true"
    spec:
      containers:
        - name: nodered
          image: nodered/node-red:latest
          ports:
            - containerPort: 1880
          volumeMounts:
            - mountPath: "/data"
              subPath: nodered
              name: unraid-storage
        - name: data-checker
          securityContext:
            runAsUser: 99
            runAsGroup: 100
          image: busybox
          command: ["/bin/sh", "-c"]
          # Check if /data is available, if not exit to restart the pod
          args:
            - while true; do
                if [ ! -d "/data" ]; then
                  echo "/data is unavailable, exiting...";
                  exit 1;
                else
                  echo "/data is available.";
                fi;
                sleep 10;
              done;
          volumeMounts:
            - mountPath: "/data"
              subPath: nodered
              name: unraid-storage
      volumes:
        - name: unraid-storage
          persistentVolumeClaim:
            claimName: unraid-un-nvme-pvc
