kubernetes/apps/home-automation/nodered/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nodered
  namespace: home-automation
  labels:
    app: nodered
spec:
  selector:
    app: nodered
  type: ClusterIP
  ports:
    - protocol: TCP
      name: "webui"
      port: 1880
      targetPort: 1880
