kubernetes/apps/home-automation/nodered/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: nodered-internal
spec:
  ingressClassName: internal
  rules:
  - host: nodered.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodered
            port:
              number: 1880
